--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "formik": "^2.4.5",
     "heroicons": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
